#code:编写company部分业务,还需要添加异常处理
