# citicup-admin/app/docs/swagger.json
@@ -15,7 +15,7 @@
     "host": "localhost:8080",
     "basePath": "{{.BasePath}}",
     "paths": {
-        "/api/company": {
+        "/api/companies": {
             "get": {
                 "description": "Get All Companies.",
                 "consumes": [
@@ -49,9 +49,71 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "description": "Update the company information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Company"
+                ],
+                "summary": "更新公司信息",
+                "responses": {
+                    "200": {},
+                    "404": {
+                        "description": "Resource not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Delete company",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Company"
+                ],
+                "summary": "添加新的公司",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.Company"
+                        }
+                    },
+                    "404": {
+                        "description": "Resource not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
-        "/api/company/{id}": {
+        "/api/companies/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -68,9 +130,34 @@
                         "description": "OK",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/model.Companies"
+                            "$ref": "#/definitions/model.Company"
                         }
                     },
+                    "404": {
+                        "description": "Resource not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete company",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Company"
+                ],
+                "summary": "删除指定公司信息",
+                "responses": {
+                    "200": {},
                     "404": {
                         "description": "Resource not found",
                         "schema": {
